--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,10 @@
 	<b>Course Code</b>- <mark>IT3EW01</mark></p></h2></div>
 	
 	<div id='picture'>
-	<p><a href="https://mail.google.com/mail/u/1/#inbox">
+	<p><a href="mailto:en19it301088@medicaps.ac.in?subject=IWT Assignment-3
+&body=It Works !!" target="_blank"
+        ><img src="2.png" alt="E-Mail"
+      /></a>
        <img src="img4.jpg" width="300" height="300" class='image'>
     </a></p>
 	
