--- a/index.htm
+++ b/index.htm
@@ -24,11 +24,8 @@
 	
 	<div id='picture'>
 	<p><a href="mailto:en19it301088@medicaps.ac.in?subject=IWT Assignment-3
-&body=It Works !!" target="_blank"
-        ><img src="2.png" alt="E-Mail"
-      /></a>
+&body=It Works !!" target="_blank">
        <img src="img4.jpg" width="300" height="300" class='image'>
     </a></p>
-	
 	</body>
 </html>
