--- a/Second.htm
+++ b/Second.htm
@@ -31,15 +31,15 @@ smart-working as well as a hard-working person depending upon the sitch. Lockdow
 about myself. My not so popupar opinion is... Marvel has never been this dark before the release of WandaVision&#128521;!</p></div>
 
     <div id='contact'><p align='center'></br>If you feel I'm the right person to help you with the front-end part (for now). Feel free to contact on:</br></br>
-	<a href="https://www.linkedin.com/feed/">
+	<a href="https://www.linkedin.com/in/soumya-bhate-4263751ab/">
        <img src="imgLin.jpg" width="40" height="40"></a>&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="https://www.instagram.com/">
+	<a href="https://www.instagram.com/soumya_bhate19/">
        <img src="imginsta.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="https://www.facebook.com/soumya.bhate19/">
        <img src="imgfb.png" width="50" height="50"></a>&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="https://github.com/">
+	<a href="https://github.com/soumyabhate">
        <img src="imggit.png" width="40" height="40"></a>&nbsp;&nbsp;&nbsp;&nbsp; 
-	<a href="https://twitter.com/home">
+	<a href="https://twitter.com/soumya_bhate19">
        <img src="imgtwit.png" width="40" height="40"></a></br></br>
 	  
 	You can also mail me at: &nbsp;&nbsp;<mark>soumya.bhate1904@gmail.com</mark></p>
