--- a/Fourth.htm
+++ b/Fourth.htm
@@ -10,10 +10,10 @@
 	</HEAD>
 	<div class='next'><a href= 'Third.htm' align='left'><mark>&#8592;Back</mark></a></div>
 	<body>
-	<p><strong>Below is a grocery list of the items required in a household:</strong></p>
+	<p><strong>Below is a grocery list of the items required in a household. The Important items are highlighted:</strong></p>
 	<p><ol type='A'>
 	    <li>Breakfast &amp; Cereals:</br>
-		<ol><li>Cornflakes</br>
+		<ol><li><mark>Cornflakes</mark></br>
 		    <ul><li>Chocos</li>
 			    <li>Kellogs</li></ul>
 			</li>
@@ -24,13 +24,13 @@
 			<li>Poha</li>
 			<li>Toast</li>
 			<li>Biscuits</br>
-			<ul><li>Cookies</li>
+                            <ul><li><mark>Cookies</mark></li>
 			    <li>Multi-grain</li></ul>
 			</li></li></ol></li>
         <li>Beverages:</br>
 		<ol><li>Juice</br>
 		    <ul><li>Mango Crush</li>
-			    <li>Icy Pineapple</li>
+			    <li><mark>Icy Pineapple</mark></li>
 				<li>Lychee Sweet</li></ul>
 		    </li>
 		    <li>Tea</br>
@@ -40,7 +40,7 @@
 		    <li>Coffee</br></li></ol></li>
 		<li>Edibles:</br>
 		<ol><li>Fruits</br>
-		    <ul><li>Apple</li>
+		    <ul><li><mark>Apple</mark></li>
 			    <li>Grapes</li>
 				<li>Orange</li></ul>
 		    </li>
@@ -51,10 +51,10 @@
 			</li></ol></li>
 		<li>Hygiene:</br>
 		<ol><li>Dettol</li>
-		    <li>Sanitizer</li>
-			<li>Mask</li>
-			<li>Phenyl bottles</li>
-			</ol></li>
+		    <li><mark>Sanitizer</mark></li>
+		    <li><mark>Mask</mark></li>
+		    <li>Phenyl bottles</li>
+		    </ol></li>
 		</ol></p>
 	</body>
 </HTML>
